# vpn-link-converter

./: .env.example  .gitignore  README.md  YzeNet.yaml  bot.py  cli.py  pyproject.toml  requirements.txt  web.py
src/bot/: __init__.py  handlers.py  keyboards.py
src/converter/: __init__.py  clash.py  parser.py  singbox.py  subscription.py  subscription_sync.py  xray.py
src/converter/protocols/: __init__.py  base.py  http.py  hy2.py  hysteria.py  shadowsocks.py  socks5.py  trojan.py  tuic.py  vless.py  vmess.py  wireguard.py
src/web/: __init__.py  routes.py
src/web/templates/: index.html
